--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-theme="cupcake" >
   <head>
-    <title>StrengthsAppTailwind</title>
+    <title><%= full_title(yield(:title)) %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -14,6 +14,9 @@
   <body>
     <%= render 'layouts/header' %>
     <main class="container mx-auto mt-28 px-5 flex">
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type} shadow-lg") %>
+      <% end %>
       <%= yield %>
     </main>
   </body>
