--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,4 @@
 <% provide(:button_text, '新規登録') %>
 <h1>新規登録</h1>
   <%= render 'form' %>
-  <%# <p>= link_to "アカウントをお持ちの方はこちら", login_path</p> %>
+  <%= link_to "アカウントをお持ちの方はこちら", login_path%>
