--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <ul class="menu menu-horizontal px-1">
         <li><%= link_to "プロフィール一覧", users_path %></li>
         <li><%= link_to "投稿一覧", episodes_path %></li>
-        <li><a>新規投稿</a></li>
+        <li><%= link_to "新規投稿", new_episode_path %></li>
       </ul>
       <div class="dropdown dropdown-end">
         <label tabindex="0" class="btn btn-ghost btn-circle avatar">
