ホームページを編集してみた

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,13 @@
-<div class="text-2xl">ここにアプリの説明を書いていく</div>
+<div class="flex justify-center mb-16">
+  <div class="card w-96 bg-base-100 shadow-xl flex-grow">
+    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+    <div class="card-body">
+      <h2 class="card-title">Shoes!</h2>
+      <p>If a dog chews shoes whose shoes does he choose?</p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary">Buy Now</button>
+      </div>
+    </div>
+  </div>
+</div>
+
