--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
     <div class="flex-none">
       <ul class="menu menu-horizontal px-1">
         <li><%= link_to "プロフィール一覧", users_path %></li>
-        <li><a>投稿一覧</a></li>
+        <li><a class="text-2xl hover:text-white">投稿一覧</a></li>
         <li><a>新規投稿</a></li>
       </ul>
       <div class="dropdown dropdown-end">
